# python-playground

./: pyproject.toml  readme.md
.ipynb_checkpoints/: getstarted-checkpoint.ipynb
chapter2/: getstarted.ipynb  greeting.txt
chapter2/.ipynb_checkpoints/: getstarted-checkpoint.ipynb
