[tool.poetry]
name = "python-playground"
version = "0.1.0"
description = ""
authors = ["s-kawabe <s.kawabe2281@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
